--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 {
   "backend": {
-    "name": "test-repo"
+    "name": "git-gateway"
   },
   "media_folder": "static/assets",
   "public_folder": "assets",
